# RustingOpenCode

./: .gitignore  Cargo.toml  README.md  USER_GUIDE.md
.sisyphus/drafts/: multi-lane-inconsistency-fix.md
crates/opencode-agent/: Cargo.toml
crates/opencode-agent/src/: agent.rs  executor.rs  message.rs
crates/opencode-cli/: Cargo.toml
crates/opencode-cli/src/: main.rs
crates/opencode-command/: Cargo.toml
crates/opencode-command/commands/: init.md
crates/opencode-command/src/: lib.rs
crates/opencode-config/: Cargo.toml
crates/opencode-config/src/: loader.rs
crates/opencode-core/: Cargo.toml
crates/opencode-grep/: Cargo.toml
crates/opencode-lsp/: Cargo.toml
crates/opencode-mcp/: Cargo.toml
crates/opencode-mcp/src/: client.rs  protocol.rs
crates/opencode-permission/: Cargo.toml
crates/opencode-permission/src/: engine.rs
crates/opencode-plugin/: Cargo.toml
crates/opencode-plugin/src/subprocess/: loader.rs  protocol.rs
crates/opencode-provider/: Cargo.toml
crates/opencode-provider/src/: anthropic.rs  bootstrap.rs  models.rs
crates/opencode-provider/tests/: provider_integration.rs
crates/opencode-server/: Cargo.toml
crates/opencode-server/src/: mcp_oauth.rs  oauth.rs  routes.rs  server.rs
crates/opencode-session/: Cargo.toml
crates/opencode-session/src/: compaction.rs  instruction.rs  llm.rs  message_v2.rs  prompt.rs  session.rs  status.rs  summary.rs  system.rs  todo.rs
crates/opencode-session/tests/: session_integration.rs
crates/opencode-storage/: Cargo.toml
crates/opencode-storage/src/: repository.rs
crates/opencode-tool/: Cargo.toml
crates/opencode-tool/src/: apply_patch.rs  bash.rs  lsp_tool.rs  registry.rs  skill.rs  tool.rs  webfetch.rs  write.rs
crates/opencode-tool/src/edit/: tool.rs
crates/opencode-tui/: Cargo.toml
crates/opencode-tui/src/: branding.rs
crates/opencode-tui/src/components/: prompt.rs
crates/opencode-tui/src/context/: app_context.rs
crates/opencode-tui/src/ui/: clipboard.rs
crates/opencode-types/: Cargo.toml
crates/opencode-util/: Cargo.toml
crates/opencode-watcher/: Cargo.toml
crates/rocode-agent/: Cargo.toml
crates/rocode-agent/src/: agent.rs  executor.rs  message.rs
crates/rocode-cli/: Cargo.toml
crates/rocode-cli/src/: agent_cmd.rs  cli.rs  db.rs  debug.rs  generate.rs  github.rs  main.rs  providers.rs  remote.rs  run.rs  server.rs  tui.rs  util.rs
crates/rocode-command/: Cargo.toml
crates/rocode-command/src/: lib.rs
crates/rocode-config/: Cargo.toml
crates/rocode-config/src/: loader.rs
crates/rocode-core/: Cargo.toml
crates/rocode-core/src/: lib.rs  process_registry.rs
crates/rocode-lsp/: Cargo.toml
crates/rocode-mcp/src/: auth.rs  client.rs  protocol.rs  transport.rs
crates/rocode-permission/src/: engine.rs
crates/rocode-plugin/: Cargo.toml
crates/rocode-plugin/builtin/: codex-auth.ts
crates/rocode-plugin/host/: plugin-host.ts
crates/rocode-plugin/src/: feature_flags.rs  lib.rs
crates/rocode-plugin/src/subprocess/: client.rs  loader.rs  runtime.rs
crates/rocode-provider/: Cargo.toml
crates/rocode-provider/src/: anthropic.rs  azure.rs  bedrock.rs  bootstrap.rs  cerebras.rs  cohere.rs  deepinfra.rs  deepseek.rs  github_copilot.rs  gitlab.rs  google.rs  groq.rs  lib.rs  mistral.rs  models.rs  openai.rs  openrouter.rs  perplexity.rs  provider.rs  stream.rs  together.rs  transform.rs  vercel.rs  vertex.rs  xai.rs
crates/rocode-provider/tests/: provider_integration.rs
crates/rocode-server/: Cargo.toml
crates/rocode-server/src/: mcp_oauth.rs  routes.rs  server.rs
crates/rocode-session/: Cargo.toml
crates/rocode-session/src/: compaction.rs  instruction.rs  llm.rs  mcp_bridge.rs  message.rs  message_v2.rs  prompt.rs  session.rs  summary.rs  system.rs
crates/rocode-session/src/prompt/: compaction_helpers.rs  message_building.rs  mod.rs  subtask.rs  tool_execution.rs  tools_and_output.rs
crates/rocode-session/src/prompt_templates/: anthropic.txt  qwen.txt
crates/rocode-storage/: Cargo.toml
crates/rocode-storage/src/: database.rs  repository.rs  schema.rs
crates/rocode-tool/: Cargo.toml
crates/rocode-tool/src/: apply_patch.rs  bash.rs  batch.rs  grep_tool.rs  invalid.rs  lib.rs  ls.rs  lsp_tool.rs  question.rs  read.rs  registry.rs  skill.rs  task.rs  todo.rs  tool.rs  webfetch.rs  write.rs
crates/rocode-tool/src/edit/: tool.rs
crates/rocode-tui/: Cargo.toml  build.rs
crates/rocode-tui/src/: api.rs  branding.rs  event.rs
crates/rocode-tui/src/app/: app.rs
crates/rocode-tui/src/components/: home.rs  logo.rs  mod.rs  prompt.rs  question.rs  session.rs  session_message.rs  session_text.rs  session_tool.rs  sidebar.rs
crates/rocode-tui/src/components/dialogs/: agent_select.rs  command_palette.rs  help.rs  mod.rs  model_select.rs  provider.rs  skill_list.rs  theme_list.rs
crates/rocode-tui/src/context/: app_context.rs  keybind.rs  session_context.rs
crates/rocode-util/src/: lib.rs  logging.rs  util.rs
crates/rocode-watcher/: Cargo.toml
docs/: README.md  api.json  opencode-agent.md  opencode-cli.md  opencode-command.md  opencode-config.md  opencode-core.md  opencode-grep.md  opencode-lsp.md  opencode-mcp.md  opencode-permission.md  opencode-plugin.md  opencode-provider.md  opencode-server.md  opencode-session.md  opencode-storage.md  opencode-tool.md  opencode-tui.md  opencode-types.md  opencode-util.md  opencode-watcher.md  opencode_vs_rocode.md  rocode-agent.md  rocode-cli.md  rocode-command.md  rocode-config.md  rocode-core.md  rocode-grep.md  rocode-lsp.md  rocode-mcp.md  rocode-permission.md  rocode-plugin.md  rocode-provider.md  rocode-server.md  rocode-session.md  rocode-storage.md  rocode-tool.md  rocode-tui.md  rocode-types.md  rocode-util.md  (+2 more)
docs/plans/: 2026-02-27-plugin-optimization-impl-plan.md  2026-02-27-plugin-system-optimization-design.md
docs/plugins_example/: README.md
docs/plugins_example/rust/: example_plugin.rs
docs/plugins_example/skill/: SKILL.md
test/: proxy.js  t2.html  tesla.html
