[package]
name = "opencode-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core = { path = "../opencode-core" }
opencode-types = { path = "../opencode-types" }
opencode-storage = { path = "../opencode-storage" }
opencode-provider = { path = "../opencode-provider" }
opencode-tool = { path = "../opencode-tool" }
opencode-mcp = { path = "../opencode-mcp" }
opencode-lsp = { path = "../opencode-lsp" }
opencode-plugin = { path = "../opencode-plugin" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
