[package]
name = "rocode-command"
version = "2026.2.27"
edition = "2021"

[dependencies]
rocode-plugin = { path = "../rocode-plugin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
regex = "1.10"
tracing = "0.1"
glob = "0.3"
